[FIX] web: kanban group's long title
In a grouped KanbanView, long group's title makes the group (aka.
column) grows instead of keeping its original size and truncate the
title using an ellipsis.

This commit fixes it by forcing a maximum width in addition of the
Flexbox rules (`flex-basis`, `flex-grow`) to prevent this effect.

Steps to reproduce:
- Open CRM
- In the KanbanView, create a new Stage with a very long title
=> the column grows instead of keeping its original width

closes odoo/odoo#105554

X-original-commit: d9872ecce78d6d7ad02cdaa16782aa473e5a7655

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -488,6 +488,10 @@
         .o_kanban_group,
         .o_column_quick_create {
             flex-basis: var(--KanbanGroup-width);
+
+            @include media-breakpoint-up(md) {
+                max-width: var(--KanbanGroup-width);
+            }
         }
     }
 
